--- a/MeetingApp/Artifacts/LocationGuestTableViewCell.xib
+++ b/MeetingApp/Artifacts/LocationGuestTableViewCell.xib
@@ -7,33 +7,33 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="LocationUserTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="90" id="KGk-i7-Jjw" customClass="LocationGuestTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3E1-fu-eEZ">
-                        <rect key="frame" x="92" y="29" width="242" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jRZ-qJ-VpK">
+                        <rect key="frame" x="76" y="22" width="258" height="31"/>
                         <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Book" family="Bodoni 72" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="disclosure" translatesAutoresizingMaskIntoConstraints="NO" id="bQs-JK-mCf">
-                        <rect key="frame" x="342" y="25" width="25" height="25"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="luN-3p-H7y">
+                        <rect key="frame" x="8" y="8" width="60" height="60"/>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gDw-vj-9fd">
-                        <rect key="frame" x="24" y="11" width="60" height="60"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="disclosure" translatesAutoresizingMaskIntoConstraints="NO" id="G4K-Ar-1gs">
+                        <rect key="frame" x="342" y="25" width="25" height="25"/>
                     </imageView>
                 </subviews>
             </tableViewCellContentView>
             <connections>
-                <outlet property="disclosureImage" destination="bQs-JK-mCf" id="ZlJ-aG-kCe"/>
-                <outlet property="locationPhoto" destination="gDw-vj-9fd" id="6um-Ct-fNN"/>
-                <outlet property="locationText" destination="3E1-fu-eEZ" id="Ei0-gq-mpn"/>
+                <outlet property="disclosureImage" destination="G4K-Ar-1gs" id="GxJ-4M-dSI"/>
+                <outlet property="locationPhoto" destination="luN-3p-H7y" id="3l9-N0-bvr"/>
+                <outlet property="locationText" destination="jRZ-qJ-VpK" id="Jb6-ns-Y19"/>
             </connections>
-            <point key="canvasLocation" x="296.5" y="418"/>
+            <point key="canvasLocation" x="305.5" y="441"/>
         </tableViewCell>
     </objects>
     <resources>
