--- a/MeetingApp/Base.lproj/Main.storyboard
+++ b/MeetingApp/Base.lproj/Main.storyboard
@@ -767,6 +767,11 @@
                     <tabBar key="tabBar" contentMode="scaleToFill" id="ATb-Uu-CDu">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
+                                <color key="value" red="1" green="0.41191820058560336" blue="0.41154469338070793" alpha="1" colorSpace="calibratedRGB"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
                     </tabBar>
                     <connections>
                         <segue destination="DCw-ZF-P27" kind="relationship" relationship="viewControllers" id="XwG-WW-1BS"/>
@@ -777,11 +782,11 @@
             </objects>
             <point key="canvasLocation" x="-2119.5" y="676.5"/>
         </scene>
-        <!--Settings-->
+        <!--Profile-->
         <scene sceneID="uFe-ZU-YsE">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ImN-FS-ccv" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Settings" image="SettingsIcon" selectedImage="SettingsIcon" id="XSI-sk-Or8"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="SettingsIcon" selectedImage="SettingsIcon" id="XSI-sk-Or8"/>
                     <toolbarItems/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="AZg-5g-D5k">
@@ -830,11 +835,11 @@
         </scene>
     </scenes>
     <resources>
-        <image name="SettingsIcon" width="35" height="33"/>
+        <image name="SettingsIcon" width="26" height="30"/>
         <image name="calendar" width="22" height="22"/>
         <image name="email" width="22" height="22"/>
         <image name="fondo" width="150" height="200"/>
-        <image name="meetingTabBar" width="35" height="29"/>
+        <image name="meetingTabBar" width="30" height="30"/>
         <image name="plus" width="22" height="22"/>
         <image name="push" width="22" height="22"/>
         <image name="reminder" width="22" height="22"/>
